--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^1.1.1",
+    "global": "^4.3.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "2.1.1",
     "react-scroll": "^1.7.10",
-    "react-slick": "^0.23.2"
+    "react-slick": "^0.23.2",
+    "surge": "^0.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
